[bdist_wheel]
universal = 1

[metadata]
name = scapy
version = attr: scapy.VERSION
author = Philippe BIONDI
author_email = phil(at)secdev.org
maintainer = Pierre LALET, Gabriel POTTER, Guillaume VALADON
license = GPL-2.0-only
description = Scapy: interactive packet manipulation tool
keywords = network
url = https://scapy.net
download_url = https://github.com/secdev/scapy/tarball/master
#long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring
project_urls =
    Documentation = https://scapy.readthedocs.io
    Source Code = https://github.com/secdev/scapy/

[options]
packages = find:
zip_safe = False # We use __file__ in scapy/__init__.py, therefore Scapy isn't zip safe
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <4

[options.packages.find]
exclude =
    test
    test.*


[options.extras_require]
basic = ipython
complete =
    ipython
    pyx
    cryptography>=2.0
    matplotlib
docs =
    sphinx>=3.0.0
    sphinx_rtd_theme>=0.4.3
    tox>=3.0.0

[options.package_data]
scapy = VERSION

[options.entry_points]
console_scripts =
    scapy = scapy.main:interact
    UTscapy = scapy.tools.UTscapy:main

[sdist]
formats=gztar
owner=root
group=root

[coverage:run]
concurrency = multiprocessing
omit =
    # Scapy specific paths
    scapy/tools/UTscapy.py
    test/*
    # Scapy external modules
    scapy/modules/six.py
    scapy/libs/winpcapy.py
    scapy/libs/ethertypes.py
    # .tox specific path
    .tox/*
    # OS specific paths
    /private/*
