[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
license_file = LICENSE

[sdist]
formats=gztar
owner=root
group=root

[coverage:run]
concurrency = multiprocessing
omit =
    # Scapy specific paths
    scapy/tools/UTscapy.py
    test/*
    # Scapy external modules
    scapy/modules/six.py
    scapy/libs/winpcapy.py
    scapy/libs/ethertypes.py
    # .tox specific path
    .tox/*
    # OS specific paths
    /private/*
